--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
+        "laravel/dusk": "^7.13",
         "mockery/mockery": "^1.4.4",
         "phpunit/phpunit": "^9.6"
     },
